--- a/my-app/.eslintrc.json
+++ b/my-app/.eslintrc.json
@@ -3,16 +3,8 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unsafe-assignment": "off",
-    "react/no-unescaped-entities": "off",
-    "@typescript-eslint/no-unused-vars": [
-      "warn",
-      {
-        "vars": "all",
-        "args": "after-used",
-        "ignoreRestSiblings": true,
-        "argsIgnorePattern": "^_",
-        "varsIgnorePattern": "^_"
-      }
-    ]
+    "@typescript-eslint/no-unused-vars": "off",
+    "react/no-unescaped-entities": "off"
+    
   }
 }
