--- a/my-app/package.json
+++ b/my-app/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-icons": "^5.4.0",
     "sanity": "^3.71.2",
+    "sharp": "^0.33.5",
     "stripe": "^17.6.0",
     "styled-components": "^6.1.14",
     "tailwind-merge": "^3.0.1",
