--- a/my-app/package.json
+++ b/my-app/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.3",
     "sanity": "^3.71.2",
     "sharp": "^0.33.5",
     "stripe": "^17.6.0",
